--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_circle_color_picker
-description: A circle color picker for flutter.
-version: 0.0.1
-author: Takeshi Tsukamoto <itometeam@gmail.com>
+description: A beatiful circle color picker which picks hsl color for flutter.
+version: 0.1.0
 homepage: https://github.com/itome/flutter_circle_color_picker
 
 environment:
